# ds1

./: AVLTree.h  CMakeLists.txt  Exception.h  Makefile  Player.cpp  Player.h  Team.cpp  Team.h  WetVerify.py  dry_for_wet_1.docx  reference.h  submissions.txt  testAVL.cpp  worldcup23a1.cpp  worldcup23a1.h
WorldCupTests/: WorldCupTests.cpp
tests/: avlTest.cpp  wcTest.cpp
